--- a/source/index_en.html
+++ b/source/index_en.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<div style="display: none; font-size:1px; color: #FFFFFF; line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">Warm wishes to all HSBC Premier's female customers on October 20th</div>
+<div style="display: none; font-size:1px; color: #FFFFFF; line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">May your October 20th be filled with love and happiness</div>
 <table width="700" border="0" cellpadding="0" cellspacing="0" class="chs_body" style="margin: 0 auto; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">
   <tr>
     <td style="margin: 0; padding: 0; border: 1px solid #CCC; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellspacing="0" cellpadding="0" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">
@@ -29,7 +29,7 @@
 						<td bgcolor="#640012" width="28"><img src="image/chs_img_square.png" width="28" height="56" alt="" style="display: block"/></td>
                       <td bgcolor="#640012" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;"><table width="100%" border="0" cellpadding="0" cellspacing="0" class="chs_body">
                           <tr>
-                            <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 35px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">May your October 20th be filled with countless words of love</td>
+                            <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 35px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF;">May your October 20th be filled with love and happiness</td>
                           </tr>
                           <tr>
                             <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
@@ -41,7 +41,7 @@
                             <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
                           </tr>
                           <tr>
-                            <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF">On the occasion of October 20th, HSBC Premier wishes to extend our heartfelt gratitude to you and all our female customers, who continually enrich our lives with your loving hearts, dedication, and many talents. We sincerely hope that you enjoy a wonderful and empowering Vietnam Women's Day with your family and friends.</td>
+                            <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF">On October 20, in addition to unique activities to celebrate Vietnamese Women's Day at branches and transaction offices; HSBC Premier wishes to extend our heartfelt gratitude to all the women in the world, who continually enrich our lives with your loving hearts, dedication, and many talents. We sincerely hope that you enjoy a wonderful and empowering Vietnam Women's Day with your family and friends.</td>
                           </tr>
 						  <tr>
                             <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
