--- a/source/index_vn.html
+++ b/source/index_vn.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-<div style="display: none; font-size:1px; color: #FFFFFF; line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">HSBC Premier tri ân những người phụ nữ Việt Nam tuyệt vời</div>
+<div style="display: none; font-size:1px; color: #FFFFFF; line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">Để 20/10 thêm trọn vẹn với vạn lời yêu thương</div>
 <table width="700" border="0" cellpadding="0" cellspacing="0" class="chs_body" style="margin: 0 auto; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">
   <tr>
     <td style="margin: 0; padding: 0; border: 1px solid #CCC; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;"><table width="100%" border="0" cellspacing="0" cellpadding="0" style="margin: 0; padding: 0; border: none; font-family: Arial, Helvetica, sans-serif !important; font-size: 16px; line-height: 1.3; color: #000000;">
@@ -42,7 +42,7 @@
                             <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
                           </tr>
                           <tr>
-                            <td align="center" style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF">Nhân ngày 20/10, HSBC Premier mong muốn gửi lời tri ân đến một nửa ngọt ngào của thế giới vì đã luôn làm đẹp cuộc sống bằng những nỗ lực, tình yêu và tài năng của mình. Chúng tôi xin chúc Quý khách có một ngày Phụ Nữ Việt Nam tràn ngập những lời yêu thương, đong đầy hạnh phúc bên gia đình và những người thân yêu.</td>
+                            <td align="center" style="padding: 0 20px; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important; color: #FFFFFF">Nhân ngày 20/10, bên cạnh các hoạt động độc đáo chào mừng Ngày Phụ Nữ Việt Nam tại chi nhánh, phòng giao dịch; HSBC Premier mong muốn gửi lời tri ân đến một nửa ngọt ngào của thế giới vì đã luôn làm đẹp cuộc sống bằng những nỗ lực, tình yêu và tài năng của mình. Chúng tôi xin chúc Quý khách có một ngày Phụ Nữ Việt Nam tràn ngập những lời yêu thương, đong đầy hạnh phúc bên gia đình và những người thân yêu.</td>
                           </tr>
 						  <tr>
                             <td style="padding: 0; margin: 0; border: none; line-height: 1.3; font-size: 16px; font-family: Arial, Helvetica, sans-serif !important;">&nbsp;</td>
